--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ body {
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 0.3rem;
+    text-decoration: none;
 }
 
 .botoncito:hover{
