--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,10 @@ body {
     width: 100%;
 }
 
+.fondogris{
+    background-color: #f5f5f5;
+}
+
 /* ESTILOS MENU */
 
 .flex_nav{
@@ -204,4 +208,146 @@ body {
     max-width: 80rem;
     padding-top: 4.3rem;
     position: relative;
+}
+
+/* LO MEJOR */  
+
+.card {
+    width: 400px;
+    height: 300px;
+    padding: 0;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.card * {
+    transition: 0.3s ease all;
+}
+
+.card img {
+    margin: 0;
+    width: 400px;
+    height: 240px;
+    object-fit: cover;
+    display: block;
+}
+
+.card h3 {
+    margin: 0;
+    padding: 12px 12px 48px;
+    line-height: 32px;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.card .focus-content {
+    display: block;
+    padding: 8px 12px;
+}
+
+.card p {
+    margin: 0;
+    line-height: 1.5;
+}
+
+.card:hover img,
+.card:focus-within img {
+    margin-top: -80px;
+}
+
+.card:hover h3,
+.card:focus-within h3 {
+    padding: 8px 12px 0;
+}
+
+.sip{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10rem;
+}
+
+@media (min-width: 480px) {
+    .sip-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 3rem;
+        column-gap: 3rem;
+    }
+}
+
+@media (min-width: 800px) {
+     .sip-container {
+         display: grid;
+         grid-template-columns: repeat(3, 1fr);
+         gap: 3rem;
+     }
+}
+
+/* PROPIETARIO */
+
+.propietario-marco{
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    margin: 0 0.5rem;
+    max-width: 1240px;
+    align-items: center;
+}
+
+.propietario{
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.propietario h2{
+    margin-bottom: 3rem;
+    width: 100%;
+    font-size: 5rem;
+    line-height: 4.4rem;
+    letter-spacing: 0.04rem;
+    text-transform: uppercase;
+}
+
+.propietario small{
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    line-height: 2.2rem;
+    letter-spacing: 0.04rem;
+    display: block;
+    box-sizing: border-box;
+}
+
+.propietario p{
+    max-width: 54.7rem;
+    width: 100%;
+    font-size: 1.5rem;
+    line-height: 30px;
+    letter-spacing: 0.2px;
+    margin: 0;
+}
+
+.propietario img{
+    margin-top: 3rem;
+    border: 0;
+    box-sizing: border-box;
+    width: 172px;
+    height: 94px;
+}
+
+.propietario-img{
+    width: 35rem;
+    height: auto;
+    align-items: center;
+    background-position: center center;
+    background-size: cover;
+}
+
+.propietario-img img{
+    width: 355px;
+    height: 700px;
+    margin-top: -5rem;
 }
