--- a/css/style.css
+++ b/css/style.css
@@ -252,14 +252,56 @@ body {
 /* LO MEJOR */  
 
 .card {
-    width: 400px;
-    height: 300px;
-    padding: 0;
+    width: 27rem;
+    margin: 0 2px 3rem 2px;
+    height: 290px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     box-sizing: border-box;
     overflow: hidden;
+    justify-content: center;
+    align-items: center;
 }
+
+@media (min-width: 360px) {
+     .card {
+         width: 35rem;
+         margin: 0 2px 3rem 2px;
+         height: 290px;
+         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+         border-radius: 8px;
+         box-sizing: border-box;
+         overflow: hidden;
+         justify-content: center;
+         align-items: center;
+     }
+}
+@media (min-width: 480px) {
+     .card {
+         width: 25.5rem;
+         margin: 0 2px 3rem 2px;
+         height: 290px;
+         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+         border-radius: 8px;
+         box-sizing: border-box;
+         overflow: hidden;
+         justify-content: center;
+         align-items: center;
+     }
+}
+
+@media (min-width: 768px) {
+     .card {
+         width: 37.5rem;
+         height: 300px;
+         padding: 0;
+         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+         border-radius: 8px;
+         box-sizing: border-box;
+         overflow: hidden;
+     }
+}
+
 
 .card * {
     transition: 0.3s ease all;
