--- a/css/style.css
+++ b/css/style.css
@@ -252,9 +252,9 @@ body {
 /* LO MEJOR */  
 
 .card {
-    width: 27rem;
-    margin: 0 2px 3rem 2px;
-    height: 290px;
+    width: 400px;
+    height: 300px;
+    padding: 0;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     box-sizing: border-box;
@@ -263,45 +263,33 @@ body {
     align-items: center;
 }
 
-@media (min-width: 360px) {
-     .card {
-         width: 35rem;
-         margin: 0 2px 3rem 2px;
-         height: 290px;
-         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
-         border-radius: 8px;
-         box-sizing: border-box;
-         overflow: hidden;
-         justify-content: center;
-         align-items: center;
-     }
-}
-@media (min-width: 480px) {
-     .card {
-         width: 25.5rem;
-         margin: 0 2px 3rem 2px;
-         height: 290px;
-         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
-         border-radius: 8px;
-         box-sizing: border-box;
-         overflow: hidden;
-         justify-content: center;
-         align-items: center;
-     }
+@media (min-width: 768px) {
+    .card {
+        width: 380px;
+        height: 300px;
+        padding: 0;
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        box-sizing: border-box;
+        overflow: hidden;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1280px) {
      .card {
-         width: 37.5rem;
+         width: 400px;
          height: 300px;
          padding: 0;
          box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
          border-radius: 8px;
          box-sizing: border-box;
          overflow: hidden;
+         justify-content: center;
+         align-items: center;
      }
 }
-
 
 .card * {
     transition: 0.3s ease all;
@@ -309,7 +297,7 @@ body {
 
 .card img {
     margin: 0;
-    width: 400px;
+    width: 100%;
     height: 240px;
     object-fit: cover;
     display: block;
@@ -343,28 +331,35 @@ body {
     padding: 8px 12px 0;
 }
 
-.sip{
+.sip {
     display: flex;
     justify-content: center;
     margin-bottom: 10rem;
 }
 
-@media (min-width: 480px) {
-    .sip-container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        row-gap: 3rem;
-        column-gap: 3rem;
-    }
+.sip-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 768px) {
+     .sip-container {
+         display: grid;
+         grid-template-columns: repeat(2, 1fr);
+        column-gap: 1rem;
+        row-gap: 3rem;        
+     }
+}
+
+@media (min-width: 1280px) {
      .sip-container {
          display: grid;
          grid-template-columns: repeat(3, 1fr);
          gap: 3rem;
      }
 }
+
 
 /* PROPIETARIO */
 
