--- a/css/style.css
+++ b/css/style.css
@@ -681,6 +681,6 @@ body {
         text-align: left;
 }
 
-.header{
+.bg{
     background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/15/47/e7/4c/4k-cafe-x2-vibe-bangkok.jpg);
 }
