--- a/css/style.css
+++ b/css/style.css
@@ -692,7 +692,7 @@ body {
 /* SERVICIOS */
 
 .bg1 {
-    background-image: url(http://viareal.com/images/menus/lunch/hero.jpg);
+    background-image:url(/imgs/menus.jpg);
     background-position: center;
 }
 
