--- a/css/style.css
+++ b/css/style.css
@@ -696,6 +696,14 @@ body {
     background-position: center;
 }
 
+.comida-letras{
+    text-align: center;
+    margin-top: 8rem;
+    font-size: 3.6rem;
+    line-height: 4.4rem;
+    letter-spacing: 0.04rem;
+}
+
 .menus{
     display: flex;
     flex-direction: column;
