--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ body {
 .botoncito{
     margin-top: 3rem;
     padding: 2rem 7rem 2rem 7rem;
-    border-radius: 0.2rem;
+    border-radius: 0.3rem;
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 0.3rem;
@@ -707,6 +707,7 @@ body {
 .menus{
     display: flex;
     flex-direction: column;
+    grid-auto-flow: column;
 }
 
 @media (min-width: 540px) {
@@ -717,17 +718,16 @@ body {
     }
 }
 
-@media (min-width: 800px) {
-    .menus {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 3rem;
-    }
-}
 
-.comida-grid{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+@media (min-width: 768px) {
+     .comida-grid {
+         display: grid;
+         grid-template-columns: repeat(2, 1fr);
+         grid-template-areas: "izquierda derecha";
+     }
+     .texto{
+         grid-area: derecha;
+     }
 }
 
 .comida h1{
@@ -767,4 +767,25 @@ body {
     line-height: 2.2rem;
     letter-spacing: 0.2rem;
     margin-top: 3rem;
+}
+
+.descargamenu{
+    background-color: #e3e0db;
+}
+
+.btnn{
+    margin-top: 3rem;
+    background-color: #2b2b2b;
+    text-decoration: none;
+    color: var(--blanco);
+    padding: 2rem;
+    border: none;
+    outline: none;
+    border-radius: 0.3rem;
+    transition: 0.2s all ease-in-out;
+}
+
+.btnn:hover{
+    background-color: #b8b8b8;
+    color: #2b2b2b;
 }
