--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ body {
     line-height: 3rem;
 }
 
-.articulo-intro.arriba{
+.arriba{
     background: #fff;
     margin: -9rem auto 5rem;
     max-width: 80rem;
@@ -791,9 +791,45 @@ section#bebida{
     outline: none;
     border-radius: 0.3rem;
     transition: 0.2s all ease-in-out;
+    cursor: pointer;
 }
 
 .btnn:hover{
     background-color: #b8b8b8;
     color: #2b2b2b;
+}
+
+/*¨CONTACTO */
+
+.contactobg{
+    background-image: url(https://ak.picdn.net/shutterstock/videos/10949765/thumb/1.jpg);
+}
+
+.formulario{
+    background: #fff;
+    margin: -9rem auto 15rem auto;
+    padding: 5rem;
+}
+
+.campo{
+    display: flex;
+    margin-bottom: 2rem;
+    gap: 2rem;
+}
+
+.campo-label{
+    flex: 0 0 9rem;
+    font-size: 1.6rem;
+    line-height: 4.4rem;
+    letter-spacing: 0.2rem;
+    text-align: right;
+}
+
+.campo-fiel{
+ flex: 1;
+ border: 1px solid rgb(202, 202, 202);
+}
+
+.campo-fiel-textarea{
+    height: 20rem;
 }
